Add TemporalData to PropertyValue (#174)

--- a/src/storage/v2/CMakeLists.txt
+++ b/src/storage/v2/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(storage_v2_src_files
     commit_log.cpp
     constraints.cpp
+    temporal.cpp
     durability/durability.cpp
     durability/serialization.cpp
     durability/snapshot.cpp
