Add support for parsing temporal types (#187)

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -9,6 +9,7 @@ set(utils_src_files
     readable_size.cpp
     signals.cpp
     sysinfo/memory.cpp
+    temporal.cpp
     thread.cpp
     thread_pool.cpp
     uuid.cpp)
