--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -119,9 +119,6 @@ target_link_libraries(${test_prefix}query_serialization_property_value mg-query)
 add_unit_test(query_streams.cpp)
 target_link_libraries(${test_prefix}query_streams mg-query kafka-mock)
 
-add_unit_test(query_temporal query_temporal.cpp)
-target_link_libraries(${test_prefix}query_temporal mg-query)
-
 # Test query/procedure
 add_unit_test(query_procedure_mgp_type.cpp)
 target_link_libraries(${test_prefix}query_procedure_mgp_type mg-query)
@@ -261,6 +258,9 @@ target_link_libraries(${test_prefix}utils_csv_parsing mg-utils fmt)
 
 add_unit_test(utils_async_timer.cpp)
 target_link_libraries(${test_prefix}utils_async_timer mg-utils)
+
+add_unit_test(utils_temporal utils_temporal.cpp)
+target_link_libraries(${test_prefix}utils_temporal mg-utils)
 
 # Test mg-storage-v2
 
