--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -44,6 +44,12 @@ function(_add_unit_test test_cpp custom_main)
 endfunction(_add_unit_test)
 
 
+# Test utilities
+
+add_library(storage_test_utils storage_test_utils.cpp)
+target_link_libraries(storage_test_utils mg-storage-v2)
+
+
 # Test integrations-kafka
 
 add_library(kafka-mock STATIC kafka_mock.cpp)
@@ -132,6 +138,10 @@ target_include_directories(${test_prefix}query_procedure_mgp_module PRIVATE ${CM
 add_unit_test_with_custom_main(query_procedure_py_module.cpp)
 target_link_libraries(${test_prefix}query_procedure_py_module mg-query)
 target_include_directories(${test_prefix}query_procedure_py_module PRIVATE ${CMAKE_SOURCE_DIR}/include)
+
+add_unit_test(query_procedures_mgp_graph.cpp)
+target_link_libraries(${test_prefix}query_procedures_mgp_graph mg-query storage_test_utils)
+target_include_directories(${test_prefix}query_procedures_mgp_graph PRIVATE ${CMAKE_SOURCE_DIR}/include)
 # END query/procedure
 
 add_unit_test(query_profile.cpp)
@@ -269,7 +279,7 @@ add_unit_test(property_value_v2.cpp)
 target_link_libraries(${test_prefix}property_value_v2 mg-utils)
 
 add_unit_test(storage_v2.cpp)
-target_link_libraries(${test_prefix}storage_v2 mg-storage-v2)
+target_link_libraries(${test_prefix}storage_v2 mg-storage-v2 storage_test_utils)
 
 add_unit_test(storage_v2_constraints.cpp)
 target_link_libraries(${test_prefix}storage_v2_constraints mg-storage-v2)
