--- a/.github/workflows/diff.yaml
+++ b/.github/workflows/diff.yaml
@@ -1,6 +1,12 @@
 name: Diff
 
 on:
+  push:
+    paths-ignore:
+      - 'docs/**'
+      - '**/*.md'
+      - '.clang-format'
+      - 'CODEOWNERS'
 
 jobs:
   community_build:
