--- a/tests/e2e/CMakeLists.txt
+++ b/tests/e2e/CMakeLists.txt
@@ -11,5 +11,6 @@ add_subdirectory(memory)
 add_subdirectory(triggers)
 add_subdirectory(isolation_levels)
 add_subdirectory(streams)
+add_subdirectory(write_procedures)
 
 copy_e2e_python_files(pytest_runner pytest_runner.sh "")
