Use mg-memory in tests

--- a/src/memory/CMakeLists.txt
+++ b/src/memory/CMakeLists.txt
@@ -3,4 +3,4 @@ set(memory_src_files
     memory_control.cpp)
 
 add_library(mg-memory STATIC ${memory_src_files})
-target_link_libraries(mg-memory jemalloc fmt)
+target_link_libraries(mg-memory mg-utils jemalloc fmt)
