--- a/.github/workflows/package_all.yaml
+++ b/.github/workflows/package_all.yaml
@@ -15,7 +15,7 @@ jobs:
           fetch-depth: 0 # Required because of release/get_version.py
       - name: "Build package"
         run: |
-          ./release/package/run.sh package community centos-7
+          ./release/package/run.sh package centos-7
       - name: "Upload package"
         uses: actions/upload-artifact@v2
         with:
@@ -32,7 +32,7 @@ jobs:
           fetch-depth: 0 # Required because of release/get_version.py
       - name: "Build package"
         run: |
-          ./release/package/run.sh package community centos-8
+          ./release/package/run.sh package centos-8
       - name: "Upload package"
         uses: actions/upload-artifact@v2
         with:
@@ -49,7 +49,7 @@ jobs:
           fetch-depth: 0 # Required because of release/get_version.py
       - name: "Build package"
         run: |
-          ./release/package/run.sh package community debian-9
+          ./release/package/run.sh package debian-9
       - name: "Upload package"
         uses: actions/upload-artifact@v2
         with:
@@ -66,7 +66,7 @@ jobs:
           fetch-depth: 0 # Required because of release/get_version.py
       - name: "Build package"
         run: |
-          ./release/package/run.sh package community debian-10
+          ./release/package/run.sh package debian-10
       - name: "Upload package"
         uses: actions/upload-artifact@v2
         with:
@@ -84,7 +84,7 @@ jobs:
       - name: "Build package"
         run: |
           cd release/package
-          ./run.sh package community debian-10 --for-docker
+          ./run.sh package debian-10 --for-docker
           ./run.sh docker
       - name: "Upload package"
         uses: actions/upload-artifact@v2
@@ -102,7 +102,7 @@ jobs:
           fetch-depth: 0 # Required because of release/get_version.py
       - name: "Build package"
         run: |
-          ./release/package/run.sh package community ubuntu-18.04
+          ./release/package/run.sh package ubuntu-18.04
       - name: "Upload package"
         uses: actions/upload-artifact@v2
         with:
@@ -119,7 +119,7 @@ jobs:
           fetch-depth: 0 # Required because of release/get_version.py
       - name: "Build package"
         run: |
-          ./release/package/run.sh package community ubuntu-20.04
+          ./release/package/run.sh package ubuntu-20.04
       - name: "Upload package"
         uses: actions/upload-artifact@v2
         with:
@@ -136,7 +136,7 @@ jobs:
           fetch-depth: 0 # Required because of release/get_version.py
       - name: "Build package"
         run: |
-          ./release/package/run.sh package enterprise centos-7
+          ./release/package/run.sh package centos-7
       - name: "Upload package"
         uses: actions/upload-artifact@v2
         with:
@@ -153,7 +153,7 @@ jobs:
           fetch-depth: 0 # Required because of release/get_version.py
       - name: "Build package"
         run: |
-          ./release/package/run.sh package enterprise centos-8
+          ./release/package/run.sh package centos-8
       - name: "Upload package"
         uses: actions/upload-artifact@v2
         with:
@@ -170,7 +170,7 @@ jobs:
           fetch-depth: 0 # Required because of release/get_version.py
       - name: "Build package"
         run: |
-          ./release/package/run.sh package enterprise debian-9
+          ./release/package/run.sh package debian-9
       - name: "Upload package"
         uses: actions/upload-artifact@v2
         with:
@@ -187,7 +187,7 @@ jobs:
           fetch-depth: 0 # Required because of release/get_version.py
       - name: "Build package"
         run: |
-          ./release/package/run.sh package enterprise debian-10
+          ./release/package/run.sh package debian-10
       - name: "Upload package"
         uses: actions/upload-artifact@v2
         with:
@@ -205,7 +205,7 @@ jobs:
       - name: "Build package"
         run: |
           cd release/package
-          ./run.sh package enterprise debian-10 --for-docker
+          ./run.sh package debian-10 --for-docker
           ./run.sh docker
       - name: "Upload package"
         uses: actions/upload-artifact@v2
@@ -223,7 +223,7 @@ jobs:
           fetch-depth: 0 # Required because of release/get_version.py
       - name: "Build package"
         run: |
-          ./release/package/run.sh package enterprise ubuntu-18.04
+          ./release/package/run.sh package ubuntu-18.04
       - name: "Upload package"
         uses: actions/upload-artifact@v2
         with:
@@ -240,7 +240,7 @@ jobs:
           fetch-depth: 0 # Required because of release/get_version.py
       - name: "Build package"
         run: |
-          ./release/package/run.sh package enterprise ubuntu-20.04
+          ./release/package/run.sh package ubuntu-20.04
       - name: "Upload package"
         uses: actions/upload-artifact@v2
         with:
