Add settings test

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -261,7 +261,10 @@ add_unit_test(utils_async_timer.cpp)
 target_link_libraries(${test_prefix}utils_async_timer mg-utils)
 
 add_unit_test(utils_license.cpp)
-target_link_libraries(${test_prefix}utils_license mg-utils mg-kvstore mg-slk)
+target_link_libraries(${test_prefix}utils_license mg-utils)
+
+add_unit_test(utils_settings.cpp)
+target_link_libraries(${test_prefix}utils_settings mg-utils)
 
 # Test mg-storage-v2
 
