Add roundtrip e2e tests for temporal types

--- a/tests/e2e/CMakeLists.txt
+++ b/tests/e2e/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(memory)
 add_subdirectory(triggers)
 add_subdirectory(isolation_levels)
 add_subdirectory(streams)
+add_subdirectory(temporal_types)
