License key introduction and removing community edition package (#232)

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,12 +1,15 @@
 set(utils_src_files
     async_timer.cpp
+    base64.cpp
     event_counter.cpp
     csv_parsing.cpp
     file.cpp
     file_locker.cpp
+    license.cpp
     memory.cpp
     memory_tracker.cpp
     readable_size.cpp
+    settings.cpp
     signals.cpp
     sysinfo/memory.cpp
     thread.cpp
@@ -14,4 +17,4 @@ set(utils_src_files
     uuid.cpp)
 
 add_library(mg-utils STATIC ${utils_src_files})
-target_link_libraries(mg-utils stdc++fs Threads::Threads spdlog fmt gflags uuid rt)
+target_link_libraries(mg-utils mg-kvstore mg-slk stdc++fs Threads::Threads spdlog fmt gflags uuid rt)
