Add e2e tests for temporal types (#241)

--- a/tests/e2e/CMakeLists.txt
+++ b/tests/e2e/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(memory)
 add_subdirectory(triggers)
 add_subdirectory(isolation_levels)
 add_subdirectory(streams)
+add_subdirectory(temporal_types)
 add_subdirectory(write_procedures)
 
 copy_e2e_python_files(pytest_runner pytest_runner.sh "")
