--- a/.github/workflows/daily_banchmark.yaml
+++ b/.github/workflows/daily_banchmark.yaml
@@ -11,6 +11,8 @@ jobs:
     runs-on: [self-hosted, Linux, X64, Diff, Gen7]
     env:
       THREADS: 24
+      MEMGRAPH_ENTERPRISE_LICENSE: ${{ secrets.MEMGRAPH_ENTERPRISE_LICENSE }}
+      MEMGRAPH_ORGANIZATION_NAME: ${{ secrets.MEMGRAPH_ORGANIZATION_NAME }}
 
     steps:
       - name: Set up repository
