--- a/.github/workflows/package_all.yaml
+++ b/.github/workflows/package_all.yaml
@@ -73,6 +73,23 @@ jobs:
           name: debian-10
           path: build/output/debian-10/memgraph*.deb
 
+  debian-11:
+    runs-on: [self-hosted, DockerMgBuild]
+    timeout-minutes: 60
+    steps:
+      - name: "Set up repository"
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0 # Required because of release/get_version.py
+      - name: "Build package"
+        run: |
+          ./release/package/run.sh package debian-11
+      - name: "Upload package"
+        uses: actions/upload-artifact@v2
+        with:
+          name: debian-11
+          path: build/output/debian-11/memgraph*.deb
+
   docker:
     runs-on: [self-hosted, DockerMgBuild]
     timeout-minutes: 60
