--- a/tests/e2e/triggers/CMakeLists.txt
+++ b/tests/e2e/triggers/CMakeLists.txt
@@ -12,3 +12,9 @@ target_link_libraries(memgraph__e2e__triggers__on_delete memgraph__e2e__triggers
 
 add_executable(memgraph__e2e__triggers__privileges privilige_check.cpp)
 target_link_libraries(memgraph__e2e__triggers__privileges memgraph__e2e__triggers_common)
+
+add_subdirectory(procedures)
+
+add_dependencies(memgraph__e2e__triggers__on_create memgraph__e2e__triggers__write.py)
+add_dependencies(memgraph__e2e__triggers__on_update memgraph__e2e__triggers__write.py)
+add_dependencies(memgraph__e2e__triggers__on_delete memgraph__e2e__triggers__write.py)
