Update option description
Co-authored-by: Kostas Kyrimis  <kostaskyrim@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -331,7 +331,7 @@ add_subdirectory(src)
 # Release configuration
 add_subdirectory(release)
 
-option(MG_ENABLE_TESTING "Set this to OFF to disable building binaries for testing purposes" ON)
+option(MG_ENABLE_TESTING "Set this to OFF to disable building test binaries" ON)
 message(STATUS "MG_ENABLE_TESTING: ${MG_ENABLE_TESTING}")
 
 if (MG_ENABLE_TESTING)
