--- a/.github/workflows/diff.yaml
+++ b/.github/workflows/diff.yaml
@@ -1,13 +1,16 @@
 name: Diff
 
 on:
+  push:
+    branches:
+      - master
   workflow_dispatch:
   pull_request:
     paths-ignore:
-      - 'docs/**'
-      - '**/*.md'
-      - '.clang-format'
-      - 'CODEOWNERS'
+      - "docs/**"
+      - "**/*.md"
+      - ".clang-format"
+      - "CODEOWNERS"
 
 jobs:
   community_build:
