Separate into files

--- a/src/query/CMakeLists.txt
+++ b/src/query/CMakeLists.txt
@@ -33,6 +33,8 @@ set(mg_query_sources
     procedure/py_module.cpp
     serialization/property_value.cpp
     stream/streams.cpp
+    stream/sources.cpp
+    stream/common.cpp
     trigger.cpp
     trigger_context.cpp
     typed_value.cpp)
