Add variable to change Python root directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -323,6 +323,7 @@ if (UBSAN)
 endif()
 
 set(MG_PYTHON_VERSION "" CACHE STRING "Specify the exact python version used by the query modules")
+set(MG_PYTHON_PATH "" CACHE STRING "Specify the exact python path used by the query modules")
 
 # Add subprojects
 include_directories(src)
