Make pulsar buildable on centos

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -56,6 +56,7 @@ function(add_external_project name)
   if (KW_SOURCE_DIR)
     set(source_dir ${KW_SOURCE_DIR})
   endif()
+  set(build_in_source 0)
   if (KW_BUILD_IN_SOURCE)
     set(build_in_source ${KW_BUILD_IN_SOURCE})
   endif()
