--- a/src/integrations/pulsar/CMakeLists.txt
+++ b/src/integrations/pulsar/CMakeLists.txt
@@ -2,5 +2,7 @@ set(integrations_pulsar_src_files
     consumer.cpp
 )
 
+find_package(CURL REQUIRED)
+
 add_library(mg-integrations-pulsar STATIC ${integrations_pulsar_src_files})
-target_link_libraries(mg-integrations-pulsar mg-utils pulsar Threads::Threads)
+target_link_libraries(mg-integrations-pulsar PRIVATE mg-utils pulsar Threads::Threads ${CURL_LIBRARIES})
